All the images are done!

--- a/src/app/blog/(posts)/0005/page.mdx
+++ b/src/app/blog/(posts)/0005/page.mdx
@@ -25,8 +25,12 @@ So sit back and get your snack of choice, time for another trip back in time.
 
 This website first started as most websites did back in the early days of the web: pure HTML, CSS, and a sprinkle of JS.
 
+import humbleBeginnings from './humble_beginnings.png';
 
-// Insert humble_beginnings.jpg here
+<div className="text-center">
+<Image src={humbleBeginnings} alt="" width={1107} height={582} className='mx-auto mb-4'/>
+<em>The first ever version of the website - a humble beginning</em>
+</div>
 
 This site is actually not that bad from the looks of it. Aside from the raw HTML that makes the code look scary, there is a lot to like visually. At this stage of the site, there was not much stuff I wanted to show; I didn't have many projects to show and also thought writing for fun was cringe (the irony). The main purpose was to effectively serve as a "second" resume for people to look at, especially as a demonstration of skill.
 
@@ -36,16 +40,24 @@ At this time, I started taking on more projects, courses at college, and interns
 
 Luckily, this was around the time I started to learn my first web framework.
 
+import homeV2 from './home_v2.png';
 
-//Insert V2 Homepage here
+<div className="text-center">
+<Image src={homeV2} alt="" width={1110} height={583} className='mx-auto mb-4'/>
+<em>The Angular Revision - A Big New Step</em>
+</div>
 
 The first web framework I learned was [Angular](https://angular.dev) (not the ancient AngularJS), the web framework from Google. Compared to the raw HTML/CSS/JS combination that this website started with, Angular is what I consider to be an "augmentation" of the paradigm. With the [component model](https://angular.dev/essentials/components), first-class support for [Material Design](https://m3.material.io/), and easier reactive programming via [RxJS and observer patterns](https://rxjs.dev), it became the first choice for some of the projects I did in the same web design course.
 
 Overall, this isn't a terrible website. Some of the elements are not well formatted, but I see that as more of my lack of thinking about "aesthetics" and more "it works". I even added a system with JSON and [JSON Schema](https://json-schema.org/) (for IDE validation) to serve as a static data for my projects list and resume. For my first foray into Angular (for a project outside the primary use cases), it's not a bad site. _But hindsight is 20/20 and there were some glaring issues_.
 
+import homeV3 from './home_v3.png';
 
+<div className="text-center">
+<Image src={homeV3} alt="" width={1110} height={583} className='mx-auto mb-4'/>
+<em>The React Revision - More of the Same</em>
+</div>
 
-// Insert V3 Homepage Here
 
 After learning [React](https://react.dev) from an internship and liking it a lot, I made the decision to rewrite the entire site (again). I _**love**_ React (after hating it initially). It's a much nicer framework that strips out many of the things that I wasn't using in Angular and focuses purely on the concept of components from a functional perspective; It changes perspective with thinking more about "how does this piece work with respect to the whole design" rather than "I have these templates that change with user interaction". Sure, you need to add packages for more common features like static routing, but I personally prefer having a small "core of functionality" to build and compose with. This philosophy is also why I migrated from [MUI](https://mui.com/) (the Material Design framework for React) to [shadcn/ui](https://ui.shadcn.com/), [react-router](https://reactrouter.com/) to [wouter](https://github.com/molefrog/wouter), and cut NPM packages where possible over the year-or-so of developing the website. I thought this would be the last "migration"
 
@@ -119,7 +131,13 @@ There are a couple of key differences (that are subtle in this representation to
 
 Because Next.js uses SSR as the basis for its framework, it meant having to worry about [React Server Components](https://react.dev/reference/rsc/server-components). These are really cool because depending on how you choose to bundle/deploy your project the result of compilation differs; static data can be "pre-rendered" into the resulting bundle (which requires only minimum client-side JS for interactivity) while dynamic data can be rendered after fetching on the server and just give the client the rendering work. Given that all the resources of this site are available by compile-time, this means _significantly slimmer bundles and faster rendering_ while still preserving the design and feel of the site. I am actually glad that I made this transition despite all the hair-pulling.
 
-//Insert commit history bit here
+
+import commitHistory from './commit-history.png';
+
+<div className="text-center">
+<Image src={commitHistory} alt="" width={650} height={434} className='mx-auto mb-4'/>
+<em>I'm usually better at commit messages trust me</em>
+</div>
 
 ## The Improvements?
 
@@ -228,7 +246,12 @@ Route (app)                              Size     First Load JS
 
 The first load JS is reduced by around 60% for _all pages_. If a page has specific JS that it needs for components like the collapsible sections in the resume or the carousels on the main page, it's added to that page's specific JS, sometimes even as part of the HTML. Not only that, the use of SSG means that each blog page being pre-rendered removes 230KB of extra JS _and_ inlines the generated HTML so it's immediately rendered by the browser. This can be verified by looking at the generated HTML for a blog page.
 
-//insert blog screenshot here
+import generatedHtml from './generated-html.png';
+
+<div className="text-center">
+<Image src={generatedHtml} alt="" width={1419} height={673} className='mx-auto mb-4'/>
+<em>Look at all of that minified HTML</em>
+</div>
 
 Now, just because there is less JavaScript being processed on page load does not mean that the page loads faster; poorly optimized code is still poorly optimized even if it is smaller. This is where time metrics can be used for certain points of the web page being loaded. I won't go into significant detail in this post, but I recommend reading the [Chrome Developer docs](https://developer.chrome.com/docs/lighthouse/overview), the [web.dev section](https://web.dev/explore/learn-core-web-vitals) on Core Web Vitals, and the [web-vitals NPM package README](https://github.com/GoogleChrome/web-vitals) for more detailed information (in fact they helped me write this article). This [Cloudflare article](https://www.cloudflare.com/learning/performance/how-dcl-and-fcp-affect-seo/) also adds a metric not covered by the other docs and provides some motivation for it. Here are the metrics I want to focus on and why I care:
 
@@ -239,17 +262,33 @@ Now, just because there is less JavaScript being processed on page load does not
 
 Using the performance tab in the Chromium browser DevTools (I use Microsoft Edge despite not using any AI features, but this applies to most Chrome-based browsers) and loaded each page using a 4G network throttling setting to make the impact of resource size more apparent given the localized hosting used for testing. Here are the metrics for the pure React site:
 
-//Insert pure react profile here
+import reactProfile from './react-profile.png';
+
+<div className="text-center">
+<Image src={reactProfile} alt="" width={1173} height={590} className='mx-auto mb-4'/>
+<em>Pure React Profile Results</em>
+</div>
 
 Given the knowledge about how the pure React page loads, it's no surprise that the DCL and L metrics occur with nearly any delay. FCP occurring almost immediately after L is likely due to some usage of [React Suspense](https://18.react.dev/reference/react/Suspense) and the "fallback" UI being shown while the actual page is loading. What really sticks out is LCP occurring around 800ms after FCP, with the actual metric being 1.6 seconds. While [this is within the recommended metric for the value in general](https://web.dev/articles/lcp), there is a major problem demonstrated in this: the heavy reliance on JavaScript to actually render the markup. Consider an imaginary browser which is great at parsing and rendering HTML but terrible at running JavaScript; Under this kind of browser the website would render much slower because of this "critical path" requiring the JavaScript to be processed. Plus, with JavaScript and CSS usually fetched asynchronously as HTML is parsed means that there is time blocking the start of rendering; the HTML might be finished parsing and ready to render but the JS/CSS hasn't been fully received.
 
 Time for the Next.js metrics, which look much better:
 
-//insert Next.js profile here
+import nextJsProfile from './nextjs-profile.png';
+
+<div className="text-center">
+<Image src={nextJsProfile} alt="" width={773} height={636} className='mx-auto mb-4'/>
+<em>Next.JS Profile Results</em>
+</div>
 
 The final metric mark (L) is around 500ms faster (than LCP in the older version) and is actually the last thing that occurs; given the shift to using HTML over JS for page content. Also, DCL happens much earlier, and is then proceeded by FCP and LCP within 250ms (FP indicates first paint but in this case it's relatively empty). Here is a zoom-in on that section specifically:
 
-//insert nextjs dcl-l screenshot
+
+import nextJsDclL from './nextjs-dcl-l.png';
+
+<div className="text-center">
+<Image src={nextJsDclL} alt="" width={1461} height={533} className='mx-auto mb-4'/>
+<em>DCL point to L point - Look at that timespan difference!</em>
+</div>
 
 Already, looking at the different rendering frames it is clear that as the page is loading there is much more content already rendered compared to the pure React version. Plus, the time between the FCP and LCP is 100ms compared to the ~600ms originally, which is a massive improvement despite the L point being further down the line.
 
@@ -261,11 +300,18 @@ The moral of the story here is something that I find to be lacking sometimes in 
 
 _**Meeting a speed requirement doesn't mean you shouldn't optimize further.**_
 
-In this age of massive websites that feel like they get slower and slower and hog more and more resources it's a breath of fresh air when you find a site that just loads in a _snap_. Especially with [Electron](https://www.electronjs.org/) becoming the massive cross-platform basis for many apps and running full browser engines just to load what might be a simple native app, the masses are settling for slower and slower software. And AI models being integrated into applications that don't need it exacerbate this problem by increasing memory requirements.
+In this age of massive websites that feel like they get slower and slower and hog more and more resources it's a breath of fresh air when you find a site that just loads in a _snap_. Especially with [Electron](https://www.electronjs.org/) becoming the massive cross-platform basis for many apps and running full browser engines just to load what might be a simple native app, the masses are settling for slower and slower software. And AI models being integrated into applications that don't need it exacerbate this problem by increasing memory requirements which can cause further slowdowns with increased memory pressure/swapping.
 
 I'm starting to rant, and many other people have talked about [the enshittification of the internet](https://open.substack.com/pub/garymarcus/p/the-imminent-enshittification-of?utm_campaign=post&utm_medium=email) already. As someone who didn't grow up with strong computers and did things to squeeze every ounce of performance out of the magic sand we tricked into thinking, _I refuse to remain complacent and will optimize things if I can_.
 
 
-Thanks for reading! Next in line are potential rants about Python, AI, or maybe I'll take 6 months to learn OpenGL from scratch (not through an engine). I don't know, I've got to get back to playing the [Indiana Jones game](https://store.steampowered.com/app/2677660/Indiana_Jones_and_the_Great_Circle/).
+Thanks for reading! Next in line are potential rants about Python, AI, or maybe I'll take 6 months to learn OpenGL from scratch (not through an engine). I don't know, I'm going to get back to playing the [Indiana Jones game](https://store.steampowered.com/app/2677660/Indiana_Jones_and_the_Great_Circle/).
 
 
+import indianaJones from './indiana_jones_game.jpg';
+
+<div className="text-center">
+<Image src={indianaJones} alt="" width={1280} height={720} className='mx-auto mb-4'/>
+<em>He said the thing!</em>
+</div>
+<br/>
